--- a/style.css
+++ b/style.css
@@ -2,8 +2,14 @@
     height: 50px;
     width: 50px;
     background-color: rgb(202, 202, 98);
+    border-style: solid;
 }
 
 .hover {
     background-color: black;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
 }
